--- a/Network and Systems Approach/cluster-maps by WGCNA.ipynb
+++ b/Network and Systems Approach/cluster-maps by WGCNA.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "import seaborn as sns; sns.set(color_codes=True)\n",
     "import matplotlib.pyplot as plt\n",
-    "color = pd.read_csv('genevscolors.csv')"
+    "color = pd.read_csv('./WGCNA Analysis/genevscolors.csv')"
    ]
   },
   {
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "train = pd.read_csv('../../datasets/training_data_after_feature_selection.csv')\n",
+    "train = pd.read_csv('../datasets/training_data_after_feature_selection.csv')\n",
     "train = train.drop(['Unnamed: 0'],axis=1)\n",
     "\n",
     "try:\n",
@@ -160,7 +160,7 @@
     "ax = sns.clustermap(x,\n",
     "               metric=\"correlation\",\n",
     "               row_colors=row_colors, cmap='RdBu')\n",
-    "ax.savefig('./genevscolors/overall_clustermap.png', dpi=500)"
+    "ax.savefig('./WGCNA Analysis/genevscolors/overall_clustermap.png', dpi=500)"
    ]
   },
   {
@@ -198,7 +198,7 @@
     "ax = sns.clustermap(train_turquoise,\n",
     "               metric=\"correlation\",\n",
     "               row_colors=row_colors, cmap='RdBu')\n",
-    "ax.savefig('./genevscolors/turquoise.png', dpi=500)"
+    "ax.savefig('./WGCNA Analysis/genevscolors/turquoise.png', dpi=500)"
    ]
   },
   {
@@ -235,7 +235,7 @@
     "ax = sns.clustermap(train_blue,\n",
     "               metric=\"correlation\",\n",
     "               row_colors=row_colors, cmap='RdBu')\n",
-    "ax.savefig('./genevscolors/blue.png', dpi=500)"
+    "ax.savefig('./WGCNA Analysis/genevscolors/blue.png', dpi=500)"
    ]
   },
   {
@@ -272,7 +272,7 @@
     "ax = sns.clustermap(train_grey,\n",
     "               metric=\"correlation\",\n",
     "               row_colors=row_colors, cmap='RdBu')\n",
-    "ax.savefig('./genevscolors/grey.png', dpi=500)"
+    "ax.savefig('./WGCNA Analysis/genevscolors/grey.png', dpi=500)"
    ]
   }
  ],
